Changes prior resubmission

--- a/www/igv.html
+++ b/www/igv.html
@@ -9,7 +9,7 @@
         var options = {
             reference: {
                       id: "ce11",
-                      fastaURL: "//storage.googleapis.com/elegansvariation.org/browser_tracks/c_elegans.PRJNA13758.WS245.genomic.fa",
+                      fastaURL: "//s3.eu-central-1.amazonaws.com/wormbuilder.dev/tracks/patc/c_elegans.PRJNA13758.ce11_WS245.genomic.fa",
                     },
             locus: "I:12,995,803-13,012,859",
             showNavigation: true,
